<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/nav_profile_icon"
            android:title="@string/menu_my_profile" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/nav_help_icon"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/nav_sign_out_icon"
            android:title="@string/menu_logout" />
    </group>
</menu>